--- a/packages/rollup-plugin-swc/package.json
+++ b/packages/rollup-plugin-swc/package.json
@@ -28,7 +28,6 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@rollup/pluginutils": "^4.1.2",
-    "csm2mjs": "file:packages/csm2mjs"
+    "@rollup/pluginutils": "^4.1.2"
   }
 }
