--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
   "name": "swc-playground",
-  "version": "1.0.0",
+  "private": true,
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "npm run build -workspaces --if-present",
-    "pretest": "npm run build",
-    "test": "npm test -workspaces --if-present"
+    "pretest": "rm -rf test-builds & npm run build",
+    "test": "rollup -c"
   },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {},
+  "author": "Mohd Ovais",
+  "license": "MIT",
   "workspaces": [
-    "packages/**",
-    "tests/**"
-  ]
+    "packages/**"
+  ],
+  "devDependencies": {
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "rollup": "^2.68.0"
+  }
 }
