--- a/packages/rollup-plugin-swc/package.json
+++ b/packages/rollup-plugin-swc/package.json
@@ -13,18 +13,16 @@
   },
   "scripts": {
     "prebuild": "rm -rf dist",
-    "build": "tsc -b tsconfig.json tsconfig-cjs.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -b tsconfig.json tsconfig-cjs.json"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Mohd Ovais",
+  "license": "MIT",
   "peerDependencies": {
     "@swc/core": "*",
-    "@swc/helpers": "*"
+    "@swc/helpers": "*",
+    "rollup": "*"
   },
   "devDependencies": {
-    "@swc/core": "^1.2.143",
-    "rollup": "^2.68.0",
     "typescript": "^4.5.5"
   },
   "dependencies": {
