--- a/packages/rollup-plugin-swc/package.json
+++ b/packages/rollup-plugin-swc/package.json
@@ -26,6 +26,7 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "@rollup/pluginutils": "^4.1.2"
+    "@rollup/pluginutils": "^4.1.2",
+    "csm2mjs": "file:../csm2mjs"
   }
 }
