--- a/package.json
+++ b/package.json
@@ -1,23 +1,43 @@
 {
-  "name": "swc-playground",
-  "private": true,
-  "description": "",
+  "name": "swc-plugin-cjs2esm",
+  "version": "0.1.0",
+  "description": "swc plugin to convert commonjs modules to esm",
+  "main": "dist/cjs/index.js",
+  "module": "dist/mjs/index.js",
+  "types": "dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/cjs/index.js",
+      "import": "./dist/mjs/index.js"
+    }
+  },
+  "files": [
+    "dist",
+    "types"
+  ],
   "scripts": {
-    "build": "npm run build -workspaces --if-present",
-    "pretest": "rm -rf test-builds & npm run build",
-    "test": "rollup -c test.config.js"
+    "prebuild": "rm -rf dist",
+    "build": "tsc -b tsconfig.json tsconfig-cjs.json",
+    "test": "rm -rf build && node test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mohdovais/swc-plugin-cjs2esm.git"
   },
   "author": "Mohd Ovais",
   "license": "MIT",
-  "workspaces": [
-    "packages/**"
-  ],
+  "bugs": {
+    "url": "https://github.com/mohdovais/swc-plugin-cjs2esm/issues"
+  },
+  "homepage": "https://github.com/mohdovais/swc-plugin-cjs2esm#readme",
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^13.1.3",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
+    "@swc/core": "^1.2.143",
+    "@types/node": "^17.0.18",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "rollup": "^2.68.0"
-  }
+    "typescript": "^4.5.5"
+  },
+  "keywords": [
+    "commonjs",
+    "esm"
+  ]
 }
